[package]
name = "ianadotio"
version = "0.1.0"
authors = ["Jaroslaw Cichon <dev@iana.io>"]
edition = "2021"
homepage = "https://github.com/ianaio/ianadotio#readme"
keywords = ["ianaio","systems", "systemd", "rust", "debian"]
categories = ["command-line-utilities", "rust-systemd", "production-tools::cargo-plugins"]
repository = "https://github.com/ianaio/ianadotio"
readme = "README.md"
description = "Rust Wasm TS"
license-file = "LICENSE.txt"
documentation = "https://docs.iana.io/website"

[dependencies]
gloo-timers = { version = "0.2", path = "crates/timers", optional = true }
gloo-events = { version = "0.1", path = "crates/events", optional = true }
gloo-file = { version = "0.2", path = "crates/file", optional = true }
gloo-dialogs = { version = "0.1", path = "crates/dialogs", optional = true }
gloo-storage = { version = "0.2", path = "crates/storage", optional = true }
gloo-render = { version = "0.1", path = "crates/render", optional = true }
gloo-console = { version = "0.2", path = "crates/console", optional = true }
gloo-utils = { version = "0.1", path = "crates/utils", optional = true }
gloo-history = { version = "0.1", path = "crates/history", optional = true }
gloo-worker = { version = "0.2", path = "crates/worker", optional = true }
gloo-net = { version = "0.3", path = "crates/net", optional = true }

[features]
default = [
    "timers",
    "events",
    "file",
    "dialogs",
    "storage",
    "render",
    "console",
    "utils",
    "history",
    "worker",
    "net",
]
futures = [
    "timers",
    "file",
    "worker",
    "gloo-timers/futures",
    "gloo-file/futures",
    "gloo-worker/futures"
]
timers = ["gloo-timers"]
events = ["gloo-events"]
file = ["gloo-file"]
dialogs = ["gloo-dialogs"]
storage = ["gloo-storage"]
render = ["gloo-render"]
console = ["gloo-console"]
utils = ["gloo-utils"]
history = ["gloo-history"]
worker = ["gloo-worker"]
net = ["gloo-net"]

[workspace]
members = [
    "crates/timers",
    "crates/events",
    "crates/net",
    "crates/file",
    "crates/dialogs",
    "crates/storage",
    "crates/console",
    "crates/utils",
    "crates/history",
    "crates/worker",
    "crates/worker-macros",
    "crates/net",

    "examples/markdown",
    "examples/clock",
    "examples/prime",
]

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
