[package]
name = "ianaio"
version = "0.1.0"
authors = ["Jaroslaw Cichon <dev.iana.io> IanaIO Rust and WebAssembly Working Group"]
description = "IanaIO backend frontend written in Rust Web Assembly RustWasm TS website"
edition = "2021"
homepage = "https://www.iana.io"
keywords = ["ianaio","rust", "assembly", "backend", "frontend"]
categories = ["command-line-utilities", "rust-systemd", "production-tools::cargo-plugins"]
repository = "https://github.com/ianaio/ianaio"
documentation = "https://docs.iana.io/rustwasm/ianaio"
readme = "README.md"
license-file = "LICENSE.txt"

[dependencies]
ianaio-timers = { version = "0.1.0", path = "crates/timers", optional = true }
ianaio-events = { version = "0.1.0", path = "crates/events", optional = true }
ianaio-file = { version = "0.1.0", path = "crates/file", optional = true }
ianaio-dialogs = { version = "0.1.0", path = "crates/dialogs", optional = true }
ianaio-storage = { version = "0.1.0", path = "crates/storage", optional = true }
ianaio-render = { version = "0.1.0", path = "crates/render", optional = true }
ianaio-console = { version = "0.1.1", path = "crates/console", optional = true }
ianaio-utils = { version = "0.1.0", path = "crates/utils", optional = true }
ianaio-history = { version = "0.1.0", path = "crates/history", optional = true }
ianaio-worker = { version = "0.1.0", path = "crates/worker", optional = true }
ianaio-net = { version = "0.1.0", path = "crates/net", optional = true }

[features]
default = [
    "timers",
    "events",
    "file",
    "dialogs",
    "storage",
    "render",
    "console",
    "utils",
    "history",
    "worker",
    "net",
]
futures = [
    "timers",
    "file",
    "worker",
    "ianaio-timers/futures",
    "ianaio-file/futures",
    "ianaio-worker/futures"
]
timers = ["ianaio-timers"]
events = ["ianaio-events"]
file = ["ianaio-file"]
dialogs = ["ianaio-dialogs"]
storage = ["ianaio-storage"]
render = ["ianaio-render"]
console = ["ianaio-console"]
utils = ["ianaio-utils"]
history = ["ianaio-history"]
worker = ["ianaio-worker"]
net = ["ianaio-net"]

[workspace]
members = [
    "crates/timers",
    "crates/events",
    "crates/net",
    "crates/file",
    "crates/dialogs",
    "crates/storage",
    "crates/console",
    "crates/utils",
    "crates/history",
    "crates/worker",
    "crates/worker-macros",
    "crates/net",

    "examples/markdown",
    "examples/clock",
    "examples/prime",
]

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
