[package]
name = "ianaio-events"
description = "Convenience crate for working with DOM event listeners"
version = "0.2.0"
authors = ["Jaroslaw Cichon <dev@iana.io>"]
edition = "2021"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/ianaio/events"
homepage = "https://rustwasm.iana.io/events"
categories = ["api-bindings", "asynchronous", "web-programming", "wasm"]
rust-version = "1.80"

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.31"
features = ["Event", "EventTarget", "AddEventListenerOptions"]

[dev-dependencies]
js-sys = "0.3.31"
futures = "0.3"
wasm-bindgen-test = "0.3.4"

[dev-dependencies.web-sys]
version = "0.3.31"
features = [
    "HtmlElement",
    "Window",
    "Document",
    "Element",
    "MouseEvent",
    "ProgressEvent",
]

