[package]
name = "ianaio-file"
description = "Convenience crate for working with JavaScript files and blobs"
version = "0.3.0"
authors = ["Jaroslaw Cichon <dev.iana.io> IanaIO Rust and WebAssembly Working Group"]
edition = "2021"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/ianaio/file"
homepage = "https://rustwasm.iana.io/file"
categories = ["api-bindings", "asynchronous", "wasm"]
rust-version = "1.80"

[package.metadata.docs.rs]
features = ["futures"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.31"
ianaio-events = { path = "../events", version = "0.2" }
mime = { version = "0.3.13", optional = true }
futures-channel = { version = "0.3", optional = true }

[dependencies.web-sys]
version = "0.3.31"
features = [
    "Blob",
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
    "BlobPropertyBag",
    "FilePropertyBag",
    "DomException",
    "Url",
]

[dev-dependencies]
futures_rs = { version = "0.3", package = "futures" }
wasm-bindgen-test = "0.3.4"
wasm-bindgen-futures = "0.4"
chrono = { version = "0.4.10", features = ["wasmbind"] }

[dev-dependencies.web-sys]
version = "0.3.31"
features = ["Window", "Response"]

[features]
default = []
futures = ["futures-channel"]

